--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
     <title>TETRIS</title>
 </head>
 <body>
-    <div class="main">
+    <div id="game">
+        <button id="Start"></button>
+        <button id="Pause"></button>
+    <div class="wrapper">
+        <div>Level: <span id="level">0</span></div>
+        <div>Score: <span id="score">0</span></div>
     </div>
 
+    <div class="main"></div>
+    <div id="game-over">Game over</div>
+    <div id="next-tetro"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
