--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>TETRIS</title>
-</head>
-<body>
-    <div id="game">
-        <button id="Start"></button>
-        <button id="Pause"></button>
-    <div class="wrapper">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Tetris</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+
+    <body>
+        <div id="game">
+        <button id="start">Start</button>
+        <button id="pause">Pause</button>
         <div>Level: <span id="level">0</span></div>
         <div>Score: <span id="score">0</span></div>
-    </div>
 
-    <div class="main"></div>
-    <div id="game-over">Game over</div>
-    <div id="next-tetro"></div>
-    </div>
-    <script src="script.js"></script>
-</body>
-</html>
+        <div class="main"></div>
+        <div id="game-over">Game over</div>
+        <div id="next-tetro"></div>
+        </div>
+        <script src="script.js"></script>
+    </body>
+    </html>
